object/output.txt
object$ g++ array02_dynamic_complexcls02.cpp 
array02_dynamic_complexcls02.cpp: In member function ‘void myArray::input()’:
array02_dynamic_complexcls02.cpp:41:28: error: ‘MAX’ was not declared in this scope
   41 |     } while(n <= 0 || n >= MAX);
      |                            ^~~
array02_dynamic_complexcls02.cpp:43:26: error: expected ‘;’ before ‘for’
   43 |     a = new complexCls[n]
      |                          ^
      |                          ;
   44 | 
   45 |     for( int i=0; i < n; i++){
      |     ~~~                   
array02_dynamic_complexcls02.cpp:45:19: error: ‘i’ was not declared in this scope
   45 |     for( int i=0; i < n; i++){
      |                   ^
object$ 
